[package]
name = "abe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pairing_ce = "0.28.5"
rabe-bn = "0.4.20"
rand = "0.8.5"
itertools = "0.11.0"
aes-gcm = "0.9.4"
sha3 = "0.9.1"
clap = { version = "4.4.4", features = ["derive", "string"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
base64-serde = "0.7.0"
base64 = "0.21.4"

[profile.release-with-debug]
inherits = "release"
debug = true